--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "start": "electron .",
     "start:server": "node backend/server.js",
     "build:css": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --watch"
-
-
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "electron": "^30.0.0",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
-    "bcrypt": "^5.1.1",
-    "axios": "^1.6.7"
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.0"
